# tiny-shell

./: .gitignore  CMakeLists.txt  README.md  WindowsShell.layout  builtins.c  builtins.h  cd.c  executor.h  main.c  main.cpp  parser.c  parser.cpp
include/: parser.h
src/: WindowsShell.cbp  WindowsShell.depend  calculator.cpp  cat_animation.cpp  converter.cpp  hangman_game.cpp  location_service.cpp  main.cpp  minesweeper_game.cpp  snake_game.cpp  weather_service.cpp
src/include/: animations.h  builtin.h  calculator.h  cat_animation.h  converter.h  execute.h  hangman_game.h  history.h  location_service.h  minesweeper_game.h  parser.h  process_manager.h  snake_game.h  system_utils.h  weather_service.h
src/process/: builtin.cpp  builtins.c  cd.c  execute.cpp  parser.c  parser.cpp  precess_manager.cpp  process_manager.cpp
testcase/: countdownUI.cpp
testcase/input/: countdownUI.cpp  test1.bat  test2.bat  test3.bat  test_echo.bat  test_echo_and_rem.bat  test_file_operations.bat
testcase/input/TestBin/: test_command.bat
